--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-streamlit
-yfinance
-plotly
-pandas
-python-dotenv
-scikit-learn
-numpy
-ta
-requests
-nltk
+Flask==2.3.3
+yfinance==0.2.28
+pandas==1.5.3
+numpy==1.24.3
+plotly==5.18.0
+scikit-learn==1.3.0
+requests==2.31.0
+python-dotenv==1.0.0
+ta==0.10.2
 textblob
-transformers
-torch
-accelerate
+nltk
+streamlit
+pyarrow==14.0.1
