--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 Flask==2.3.3
-yfinance==0.2.28
-pandas==1.5.3
-numpy==1.24.3
-plotly==5.18.0
-scikit-learn==1.3.0
-requests==2.31.0
+yfinance>=0.2.31
+pandas>=2.1.0
+numpy>=1.24.0
+plotly>=5.17.0
+scikit-learn>=1.3.0
+requests>=2.31.0
 python-dotenv==1.0.0
 ta==0.10.2
 textblob
 nltk
-streamlit
+streamlit>=1.28.0
 pyarrow==14.0.1
+torch>=2.1.0
+transformers>=4.35.0
+nemo-toolkit>=1.20.0
+beautifulsoup4>=4.12.0
